Use Java Optional and Stream instead of Guava (#75)